--- a/cordel moderno/style.css
+++ b/cordel moderno/style.css
@@ -1,10 +1,14 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
 
-  
+* {
+    margin: 0px;
+    padding: 0px;
+}  
 
 body {
-    margin: -8px;
+    min-height: 100%vh;
 }
 header {
     background-color: black;
@@ -13,69 +17,66 @@ header {
     height: 200px;
     padding-top: 30px;
 }
+h1 {
+    font-family: "Passion One", sans-serif;
+    font-variant: small-caps;
+    font-size: 10vh;
+}
+h3{
+    font-family: Verdana, sans-serif;
+    font-size: 2vh;
+    font-style: normal;
+}
+a{
+    color: white;
+    text-decoration: none;
+    font-style: bold;
+}
+a:hover{
+    text-decoration: underline;
+}
 main {
     font-family: "Sriracha", cursive;
-    font-size: 33px;
-    padding-left: 40px;
+    font-size: 4vh;
+    line-height: 2em;
 }
-h1 {
-    font-family: cursive;
+
+div{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 20px;
 }
-.container {
-    position: relative;
-}
-.conteudo {
-    position: absolute;
-    background-size: 100% 100%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-p{
-    line-height: 1em;
-}
-.p1{
+.normal{
     background-color: white;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    border: 0cap;
+    margin: 0%;
+    position: relative
 }
-.p2{
-    position: absolute;
+.imagem{
+    color: white;
     background-color: rgba(0, 0, 0, 0);
-    padding-top: 40px;
-    padding-bottom: 40px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.644) ;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.596);
+    background-attachment: fixed;
 }
-.p3{
-    background-color: white;
-    padding-top: 40px;
-    padding-bottom: 40px;
+.imagem > p{
+    background-color: rgba(0, 0, 0, 0.473);
+    display: inline-block;
+    padding: 5px;
 }
-.p4{
-    background-color: white;
-    padding-top: 40px;
-    padding-bottom: 40px;
+#img1{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-repeat: no-repeat;
 }
-.p5{
-    background-color: white;
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-.p6{
-    background-color: white;
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-.p7{
-    background-color: white;
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-#container{
-    background-color: rgba(0, 0, 0, 0.164);
-    position: relative;
-    width: 390px;
-    height: 400px;
+#img2{
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
+    background-repeat: no-repeat;
 }
 footer {
-
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
 }
